--- a/Assets/ResoniteSDK/Primitives/Vectors.tt
+++ b/Assets/ResoniteSDK/Primitives/Vectors.tt
@@ -7,7 +7,9 @@
 
 using System;
 using ResoniteLink;
-using UnityEngine;
+
+namespace UnityEngine
+{
 
 <#
 var types = new List<string>()
@@ -69,3 +71,5 @@ foreach(var type in types)
 }
 
 #>
+
+}
